--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,26 +11,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication2">
+        <activity android:name=".ui.SplashScreen">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN"/>
+            <action android:name="android.intent.action.VIEW"/>
+            <category android:name="android.intent.category.LAUNCHER"/>
+        </intent-filter>
+        </activity>
         <activity android:name=".ui.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
         <activity android:name=".ui.CreateAccountActivity" />
         <activity android:name=".ui.SavedFoodListActivity" />
         <activity android:name=".ui.FoodDetailActivity" />
-        <activity android:name=".ui.AboutActivity"/>
+        <activity android:name=".ui.AboutActivity" />
         <activity android:name=".ui.FoodListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.myapplication2.ui.MainActivity" />        </activity>
-        <activity
-            android:name=".ui.MainActivity">
-
+                android:value="com.moringaschool.myapplication2.ui.MainActivity" />
         </activity>
-
+        <activity android:name=".ui.MainActivity"></activity>
     </application>
 
 </manifest>
