--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.firebaseui:firebase-ui-database:8.0.0'
+    
+    def lottieVersion = "3.4.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
 
     implementation 'com.google.firebase:firebase-auth'
 }
